# EzMemory

./: .gitignore  README.md  ezmemory.py  pyproject.toml  requirements.txt
examples/: README.md  basic_usage.py  sdk_openai_qdrant.py  sdk_openrouter_qdrant.py  sdk_voyage_qdrant.py
src/ezmemory/: __init__.py
src/memory_service/: __init__.py  main.py
src/memory_service/config/: __init__.py  config_docs.py  constants.py  logging.py  settings.py
src/memory_service/embeddings/: __init__.py  base.py  gemini.py  nvidia.py  openai_embedding.py  openrouter.py  voyage.py
src/memory_service/http_server/: __init__.py  server.py
src/memory_service/mcp/: __init__.py  handlers.py  server.py
src/memory_service/memory/: __init__.py  encoder.py  lifecycle.py  retrieval.py  schemas.py  storage.py  viewer.py
src/memory_service/utils/: __init__.py  add_to_agents.py  hashing.py  text.py  time.py
src/memory_service/vector_store/: __init__.py  base.py  pinecone.py  qdrant.py  zilliz.py
