[project]
name = "ezmemory"
version = "0.1.1"
description = "AI Agent Memory System with embeddings and vector storage"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=2.14.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "voyageai>=0.3.7",
    "openai>=2.16.0",
    "rich>=14.3.1",
    "questionary>=2.1.1",
    "click>=8.3.1",
    "python-dateutil>=2.9.0",
    "httpx>=0.28.1",
    "fastapi>=0.128.0",
    "pymilvus>=2.6.8",
    "pinecone>=8.0.0",
    "google-genai>=1.62.0"
]

[project.scripts]
ezmemory = "memory_service.main:main"

[tool.setuptools]
packages = ["ezmemory", "memory_service"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
